--- a/style.css
+++ b/style.css
@@ -1,12 +1,106 @@
-@import url("https://fonts.googleapis.com/css2?family=Koulen&family=Signika+Negative&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Oleo+Script+Swash+Caps&family=Signika+Negative&display=swap');
 /* font-family: 'Koulen', cursive;
 font-family: 'Signika Negative', sans-serif; */
+html {
+    /* footer support */
+    position: relative;
+    min-height: 100%;
+  }
 
 * {
   margin: 0rem;
   padding: 0rem;
 }
 
+.main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+h1 {
+    font-family: 'Oleo Script Swash Caps', cursive;
+    font-size: 3rem;
+    margin-top: 0px;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top:2rem;
+    gap: 1rem;
+    border-radius: 3rem;
+    width: 900px;
+    height: 650px;
+    background-color: rgb(114, 221, 247);
+}
+
+
+.countainer {
+    background-color: rgb(237, 246, 249);
+    width: 700px;
+    height: 400px;  
+}
+
+.btn1-container{
+    display: flex;
+    gap: 23px;
+} 
+
+.btn {
+    width: 100px;
+    height: 50px;
+    border: none;
+    border-radius: 0.5rem;
+}
+
+.btn-black {
+    font-family: 'Signika Negative', sans-serif;
+    font-size: x-large;
+    background-color: rgb(179, 136, 235);
+    color: black;
+}
+
+.btn-random{
+    font-family: 'Signika Negative', sans-serif;
+    font-size: x-large;
+    background-color: rgb(247, 174, 248);
+    color: black
+
+}
+
+.color-picker {
+    background-color: rgb(234, 132, 201);
+    font-family: 'Signika Negative', sans-serif;
+    font-size: larger;
+}
+
+.sidebar {
+    background-color: rgb(239, 148, 213);
+    width: 200px;
+    height: 10px;
+    border-radius: 1rem;
+    margin-top: 2.3rem;
+}
+
+.btn-clear {
+    font-family: 'Signika Negative', sans-serif;
+    font-size: x-large;
+    background-color: rgb(229, 116, 188);
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-family: 'Signika Negative', sans-serif;
+    
+}
 
