--- a/style.css
+++ b/style.css
@@ -1,106 +1,179 @@
-@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Oleo+Script+Swash+Caps&family=Signika+Negative&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Koulen&family=Oleo+Script+Swash+Caps&family=Signika+Negative&display=swap");
 /* font-family: 'Koulen', cursive;
 font-family: 'Signika Negative', sans-serif; */
+
 html {
-    /* footer support */
-    position: relative;
-    min-height: 100%;
-  }
+  position: relative;
+  min-height: 100%;
+}
 
 * {
   margin: 0rem;
   padding: 0rem;
 }
 
-.main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-h1 {
-    font-family: 'Oleo Script Swash Caps', cursive;
-    font-size: 3rem;
-    margin-top: 0px;
-}
-
-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top:2rem;
-    gap: 1rem;
-    border-radius: 3rem;
-    width: 900px;
-    height: 650px;
-    background-color: rgb(114, 221, 247);
-}
-
 
 .countainer {
-    background-color: rgb(237, 246, 249);
-    width: 700px;
-    height: 400px;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 3rem;
+  width: 900px;
+  height: 650px;
+  background-color: rgb(114, 221, 247);
 }
 
-.btn1-container{
-    display: flex;
-    gap: 23px;
-} 
+.h1 {
+  font-family: "Oleo Script Swash Caps", cursive;
+  font-size: 3rem;
+  margin-top: 0px;
+}
+.countainer-ganerate {
+  background-color: rgb(237, 246, 249);
+  width: 700px;
+  height: 400px;
+}
+
+.btn1-container {
+  display: flex;
+  gap: 23px;
+}
 
 .btn {
-    width: 100px;
-    height: 50px;
-    border: none;
-    border-radius: 0.5rem;
+  width: 100px;
+  height: 50px;
+  border: none;
+  border-radius: 0.5rem;
 }
 
 .btn-black {
-    font-family: 'Signika Negative', sans-serif;
-    font-size: x-large;
-    background-color: rgb(179, 136, 235);
-    color: black;
+  font-family: "Signika Negative", sans-serif;
+  font-size: x-large;
+  background-color: rgb(179, 136, 235);
+  color: black;
 }
 
-.btn-random{
-    font-family: 'Signika Negative', sans-serif;
-    font-size: x-large;
-    background-color: rgb(247, 174, 248);
-    color: black
-
+.btn-random {
+  font-family: "Signika Negative", sans-serif;
+  font-size: x-large;
+  background-color: rgb(247, 174, 248);
+  color: black;
 }
 
 .color-picker {
-    background-color: rgb(234, 132, 201);
-    font-family: 'Signika Negative', sans-serif;
-    font-size: larger;
+  background-color: rgb(234, 132, 201);
+  font-family: "Signika Negative", sans-serif;
+  font-size: larger;
 }
 
-.sidebar {
-    background-color: rgb(239, 148, 213);
-    width: 200px;
-    height: 10px;
-    border-radius: 1rem;
-    margin-top: 2.3rem;
+.slider {
+  width: 200px;
+  -webkit-appearance: none;
 }
+
+.slider:focus {
+    outline: none;
+}
+
+.slider::-webkit-slider-runnable-track{
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    box-shadow: none;
+    background: rgb(255, 255, 255);
+    border-radius: 0px;
+    border: 0px solid #ffffff;
+}
+
+.slider::-moz-range-track {
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    box-shadow: none;
+    border-radius: 0px;
+    border: 0px solid #ffffff;
+}
+
+.slider::-webkit-slider-thumb {
+    box-shadow: none;
+    border: 0px solid #ffffff;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+    height: 35px;
+    width: 15px;
+    border-radius: 22px;
+    background: rgba(255,255,255,1);
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -16px;
+}
+
+.slider::-moz-range-thumb {
+    box-shadow: none;
+    border: 0px solid #ffffff;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+    height: 42px;
+    width: 22px;
+    border-radius: 22px;
+    background: rgba(255,255,255,1);
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -20px;
+}
+
+/* .rs-lable{
+    position: relative;
+    transform-origin: center center;
+    display: block;
+    width: 88px;
+    height: 88px;
+    background: transparent;
+    border-radius: 50%;
+    line-height: 30px;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 22px;
+    box-sizing: border-box;
+    border: 2px solid #ffffff;
+    margin-top: 20px;
+    margin-left: -38px;
+    left: attr(value);
+    color: #ffffff;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    font-family: "Signika Negative", sans-serif;
+}
+
+.rs-lable::after {
+    content: "kg";
+    display: block;
+    font-size: 20px;
+    letter-spacing: 0.07em;
+    margin-top: -2px;
+    font-family: "Signika Negative", sans-serif;
+} */
 
 .btn-clear {
-    font-family: 'Signika Negative', sans-serif;
-    font-size: x-large;
-    background-color: rgb(229, 116, 188);
+  font-family: "Signika Negative", sans-serif;
+  font-size: x-large;
+  background-color: rgb(229, 116, 188);
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    font-family: 'Signika Negative', sans-serif;
-    
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-family: "Signika Negative", sans-serif;
 }
-
