--- a/style.css
+++ b/style.css
@@ -74,93 +74,6 @@ html {
   font-size: larger;
 }
 
-.slider {
-  width: 200px;
-  -webkit-appearance: none;
-}
-
-.slider:focus {
-    outline: none;
-}
-
-.slider::-webkit-slider-runnable-track{
-    width: 100%;
-    height: 2px;
-    cursor: pointer;
-    box-shadow: none;
-    background: rgb(255, 255, 255);
-    border-radius: 0px;
-    border: 0px solid #ffffff;
-}
-
-.slider::-moz-range-track {
-    width: 100%;
-    height: 2px;
-    cursor: pointer;
-    box-shadow: none;
-    border-radius: 0px;
-    border: 0px solid #ffffff;
-}
-
-.slider::-webkit-slider-thumb {
-    box-shadow: none;
-    border: 0px solid #ffffff;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-    height: 35px;
-    width: 15px;
-    border-radius: 22px;
-    background: rgba(255,255,255,1);
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -16px;
-}
-
-.slider::-moz-range-thumb {
-    box-shadow: none;
-    border: 0px solid #ffffff;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-    height: 42px;
-    width: 22px;
-    border-radius: 22px;
-    background: rgba(255,255,255,1);
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -20px;
-}
-
-/* .rs-lable{
-    position: relative;
-    transform-origin: center center;
-    display: block;
-    width: 88px;
-    height: 88px;
-    background: transparent;
-    border-radius: 50%;
-    line-height: 30px;
-    text-align: center;
-    font-weight: bold;
-    padding-top: 22px;
-    box-sizing: border-box;
-    border: 2px solid #ffffff;
-    margin-top: 20px;
-    margin-left: -38px;
-    left: attr(value);
-    color: #ffffff;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    font-family: "Signika Negative", sans-serif;
-}
-
-.rs-lable::after {
-    content: "kg";
-    display: block;
-    font-size: 20px;
-    letter-spacing: 0.07em;
-    margin-top: -2px;
-    font-family: "Signika Negative", sans-serif;
-} */
-
 .btn-clear {
   font-family: "Signika Negative", sans-serif;
   font-size: x-large;
@@ -177,3 +90,97 @@ html {
   width: 100%;
   font-family: "Signika Negative", sans-serif;
 }
+
+
+
+
+
+
+/* style of slider */
+
+.slider {
+  width: 200px;
+  -webkit-appearance: none;
+}
+
+.slider:focus {
+  outline: none;
+}
+
+.slider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: none;
+  background: rgb(255, 255, 255);
+  border-radius: 0px;
+  border: 0px solid #ffffff;
+}
+
+.slider::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: none;
+  border-radius: 0px;
+  border: 0px solid #ffffff;
+}
+
+.slider::-webkit-slider-thumb {
+  box-shadow: none;
+  border: 0px solid #ffffff;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  height: 35px;
+  width: 15px;
+  border-radius: 22px;
+  background: rgba(255, 255, 255, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -16px;
+}
+
+.slider::-moz-range-thumb {
+  box-shadow: none;
+  border: 0px solid #ffffff;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  height: 42px;
+  width: 22px;
+  border-radius: 22px;
+  background: rgba(255, 255, 255, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -20px;
+}
+
+/* .rs-lable{
+      position: relative;
+      transform-origin: center center;
+      display: block;
+      width: 88px;
+      height: 88px;
+      background: transparent;
+      border-radius: 50%;
+      line-height: 30px;
+      text-align: center;
+      font-weight: bold;
+      padding-top: 22px;
+      box-sizing: border-box;
+      border: 2px solid #ffffff;
+      margin-top: 20px;
+      margin-left: -38px;
+      left: attr(value);
+      color: #ffffff;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      font-family: "Signika Negative", sans-serif;
+  }
+  
+  .rs-lable::after {
+      content: "kg";
+      display: block;
+      font-size: 20px;
+      letter-spacing: 0.07em;
+      margin-top: -2px;
+      font-family: "Signika Negative", sans-serif;
+  } */
