--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 /* font-family: 'Koulen', cursive;
 font-family: 'Signika Negative', sans-serif; */
 
-
 * {
   margin: 0rem;
   padding: 0rem;
@@ -24,7 +23,7 @@ font-family: 'Signika Negative', sans-serif; */
   gap: 1rem;
   height: 650px;
   width: 800px;
-  height:px;
+  height: px;
   background-color: rgb(114, 221, 247);
 }
 
@@ -57,6 +56,7 @@ font-family: 'Signika Negative', sans-serif; */
   height: 50px;
   border: none;
   border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 .btn-black {
@@ -73,28 +73,17 @@ font-family: 'Signika Negative', sans-serif; */
   color: black;
 }
 
-.color-picker {
-  background-color: rgb(234, 132, 201);
-  font-family: "Signika Negative", sans-serif;
-  font-size: larger;
-}
-
 .btn-clear {
   font-family: "Signika Negative", sans-serif;
   font-size: x-large;
   background-color: rgb(229, 116, 188);
 }
 
-
 .display-value {
-
   margin: 20px 0px 0px 20px;
   font-family: "Signika Negative", sans-serif;
   font-size: x-large;
 }
-
-
-/* style of slider */
 
 .slider {
   width: 200px;
@@ -150,4 +139,27 @@ font-family: 'Signika Negative', sans-serif; */
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -20px;
+}
+
+.color-picker {
+  margin-left: 0.5rem;
+  initial-value: #dfdfdf;
+  cursor: pointer;
+}
+
+input[type="color"] {
+  -webkit-appearance: none;
+  width: 80px;
+  height: 80px;
+  border: none;
+  background-color: transparent;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50px;
 }
